--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,72 +1,117 @@
 * {
   box-sizing: border-box;
-}
-
-.nav {
-  background-color: #333;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 2rem;
-  padding: 0;
-}
-
-.site-title {
-  font-size: 2rem;
-}
-
-.nav ul {
-  padding: 0;
   margin: 0;
-  list-style: none;
-  display: flex;
-  gap: 1rem;
+  padding: 0;
+  font-family: "Inter";
 }
 
-.nav a {
-  color: inherit;
-  text-decoration: none;
-  height: 100%;
+/* -----------------------------NAVBAR------------------------------ */
+.hide {
+  display: none !important;
+}
+
+header {
+  width: 100%;
+  height: 80px;
+  background-color: #11101b;
   display: flex;
   align-items: center;
-  padding: 0.25rem;
+  justify-content: space-between;
+  padding: 0 50px;
 }
 
-.nav li.active {
-  background-color: #555;
+.logo {
+  font-size: 28px;
+  font-weight: 700;
+  color: #fefefe;
 }
 
-.nav li:hover {
-  background-color: #777;
+.hamburger {
+  display: none;
 }
 
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
+.nav-bar ul {
+  display: flex;
+  text-decoration: none;
+  list-style: none;
 }
 
-.map-container {
-  height: 100vh;
-  width: 100vw;
+.nav-bar ul li a {
+  display: block;
+  color: #fefefe;
+  font-size: 18px;
+  padding: 10px 25px;
+  border-radius: 50px;
+  transition: 0.2s;
+  margin: 0 5px;
+  text-decoration: none;
 }
 
-.sidebar {
-  background-color: rgba(35, 55, 75, 0.9);
-  color: #ffffff;
-  padding: 6px 12px;
-  font-family: monospace;
-  z-index: 1;
-  position: absolute;
-  bottom: -18px;
-  left: 50%;
-  width: 50%;
-  margin: 0px;
-  padding: 6px;
-  text-align: center;
-  transform: translate(-50%, -50%);
-  margin: 12px;
-  border-radius: 4px;
+.nav-bar ul li a:hover {
+  color: #11101b;
+  background-color: #fefefe;
+}
+
+li::marker {
+  display: none;
+}
+
+.nav-bar ul li a.active {
+  color: #11101b;
+  background-color: #fefefe;
+}
+
+.cross {
+  display: block;
+  color: #fefefe;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1650px) {
+  header {
+    padding: 0 25px;
+    flex-direction: row-reverse;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger .line {
+    width: 30px;
+    height: 3px;
+    background: #fefefe;
+    margin: 6px 0;
+  }
+  .nav-bar {
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 290px;
+    background-color: #11101b;
+    transition: 0.2s;
+    height: 0px;
+    overflow: hidden;
+  }
+  .nav-bar.active {
+    height: calc(100% - 80px);
+    overflow: hidden;
+  }
+  .nav-bar ul {
+    display: block;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin-top: 30px;
+    text-align: left;
+    transition: 0.5s;
+    opacity: 0;
+  }
+  .nav-bar.active ul {
+    opacity: 1;
+  }
+  .nav-bar ul li a {
+    margin-bottom: 12px;
+    font-size: 18px;
+    padding: 10px 100px 10px 25px;
+  }
 }
