--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -115,3 +115,100 @@ li::marker {
     padding: 10px 100px 10px 25px;
   }
 }
+
+/* -----------------------------FAQ------------------------------ */
+
+.faqScreen {
+  width: 100%;
+  height: 100%;
+  background-color: #333333;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding: 35px;
+  color: white;
+}
+
+.faqScreen .faqScreenContent {
+  width: 100%;
+  max-width: 1400px;
+}
+
+.faqScreen h1 {
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.faqScreen h3 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  width: 70%;
+  color: #e9e9e9;
+  margin-bottom: 30px;
+}
+
+.faqScreen .disasterFaq {
+  border-top: 1px solid #D6D6D6;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.faqScreen .faq {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px 10px;
+  border-bottom: 1px solid #D6D6D6;
+  cursor: pointer;
+}
+
+.faqScreen .question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.faqScreen .question h2 {
+  font-size: 30px;
+  letter-spacing: 1.2px;
+}
+
+.faqScreen .answer p{
+  padding-top: 15px;
+  font-size: 18px;
+}
+
+.faqScreen .answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 1.4s ease;
+}
+
+.faqScreen .faq.active .answer {
+  max-height: 100px;
+  animation: fade 1s ease-in-out; 
+}
+
+.faqScreen .faq.active img {
+  transform: rotate(180deg);
+}
+
+.faqScreen .faq.active .question img {
+  transition: transform 0.5s ease-in;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
