--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -217,3 +217,34 @@ li::marker {
   height: 100vh;
   width: 100vw;
 }
+
+.disaster-sidebar {
+  position: absolute;
+  top: 40%; /* Changed top to 50% */
+  right: 0;
+  width: 250px;
+  height: 10%;
+  overflow-y: scroll;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  transform: translateY(-50%); /* Added transform translateY */
+}
+
+.disaster-sidebar h3 {
+  margin-top: 0;
+}
+
+.disaster-sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.disaster-sidebar li {
+  cursor: pointer;
+}
+
+.disaster-sidebar li:hover {
+  text-decoration: underline;
+}
