--- a/src/screens/LoginScreen/LoginScreen.css
+++ b/src/screens/LoginScreen/LoginScreen.css
@@ -70,7 +70,7 @@
 }
 
 .btnSubmit {
-  background: #5a69b5;
+  background: #2a40ad;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   color: #fff;
@@ -79,4 +79,9 @@
   width: 66%;
   padding: 7px 45px;
   border: 0;
+  cursor: pointer;
+}
+
+.btnSubmit:hover {
+  background: #5a69b5;
 }
