--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,6 +46,7 @@ header {
   color: #fefefe;
   z-index: 10000;
   position: relative;
+  box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.25);
 }
 
 nav a {
@@ -59,10 +60,6 @@ nav a:hover {
   color: #11101b;
   background-color: #fefefe;
   border-radius: 5px;
-}
-
-nav a.active {
-  background-color: #db2b39;
 }
 
 header .nav-btn {
@@ -103,11 +100,17 @@ nav {
 		gap: 1.5rem;
 		background-color: #11101b;
 		transition: 1s;
+    /* changes made  */
+    visibility: hidden;
 	}
-
+  
 	header .responsive_nav {
-		transform: translateY(100vh);
-	}
+    transform: translateY(100vh);
+    visibility: visible;
+    overflow: scroll;
+    justify-content: flex-start;
+    align-items: center;
+}
 
 	nav .nav-close-btn {
 		position: absolute;
@@ -232,3 +235,36 @@ nav {
   text-decoration: underline;
 }
 
+
+/* -----------------------------BULLETIN------------------------------ */
+
+.bulletin-page {
+  width: 100%;
+  max-width: 1400px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 100%;
+  color: #fefefe;
+}
+
+.bulletin-page h1 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #fefefe;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.bulletin-page p {
+  font-size: 17px;
+  font-weight: 300;
+  color: #fefefe;
+  text-align: left;
+  margin-bottom: 50px;
+  width: 100%;
+  max-width: 990px;
+  line-height: 28px;
+}
