--- a/src/screens/LoginScreen/LoginScreen.css
+++ b/src/screens/LoginScreen/LoginScreen.css
@@ -41,6 +41,7 @@
   outline: none;
   border: 1px solid #fff;
   border-radius: 5px;
+  color: #fefefe;
   background-color: transparent;
   /* height:2.5rem; */
 
@@ -65,6 +66,12 @@
   background-color: #333;
 }
 
+/* .input:active + .placeholder {
+  top: -10px;
+  color: #fff;
+  background-color: #333;
+} */
+
 .submitContainer {
   max-width: 350px;
 }
@@ -76,8 +83,8 @@
   color: #fff;
   font-weight: 700;
   font-size: 12px;
-  width: 66%;
-  padding: 7px 45px;
+  width: 58%;
+  padding: 9px 45px;
   border: 0;
   cursor: pointer;
 }
