--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -11,7 +11,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   padding-top: 65px;
   margin-top: -65px;
@@ -110,6 +111,7 @@ nav {
     overflow: scroll;
     justify-content: flex-start;
     align-items: center;
+    padding-top: 40px;
 }
 
 	nav .nav-close-btn {
@@ -128,7 +130,7 @@ nav {
 
 .faq-page {
   padding: 50px;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -142,19 +144,20 @@ nav {
 }
 
 .faq-info>h1 {
-  font-size: 40px;
-  font-weight: 700;
+  font-size: 30px;
+  font-weight: 600;
   color: #fefefe;
   text-align: left;
   margin-bottom: 10px;
 }
 
 .faq-info>p{
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 17px;
+  font-weight: 300;
   color: #fefefe;
   text-align: left;
   margin-bottom: 50px;
+  line-height: 25px;
 }
 
 .wrapper {
@@ -180,8 +183,13 @@ nav {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 16px;
   margin-top: 5px;
+  font-weight: 500;
+}
+
+.title>h2 {
+  font-weight: 500;
 }
 
 .content {
@@ -190,13 +198,15 @@ nav {
   overflow: hidden;
   transition: all 0.5s cubic-bezier(0,1,0,1);
   font-size: 16px;
-  padding-top: 10px;
+  padding-top: 5px;
+  margin-bottom: 10px;
 }
 
 .content.show {
   height: auto;
   max-height: 9999px;
   transition: all 0.5s cubic-bezier(0,1,0,1);
+  line-height: 25px;
 }
 
 .map-container {
