--- a/src/screens/LoginScreen/LoginScreen.css
+++ b/src/screens/LoginScreen/LoginScreen.css
@@ -10,10 +10,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: #333;
 }
+
 .loginContainer {
   display: flex;
   justify-content: center;
