--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,8 +46,11 @@ header {
   background-color: #11101b;
   color: #fefefe;
   z-index: 10000;
-  position: relative;
+  /* position: relative; */
   box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.25);
+  /* make navbar stick to the top */
+  position: sticky; 
+  top: 0;
 }
 
 nav a {
@@ -299,6 +302,7 @@ nav {
   align-items: center;
   margin-left: 10px;
   margin-right: 10px;
+  cursor: pointer;
 }
 .bulletin__selected_filter{
   border: 1px solid #fefefe;
@@ -309,6 +313,7 @@ nav {
   margin-right: 10px;
   background-color: #fefefe;
   color: #11101b;
+  cursor: pointer;
 }
 /* -----------------------------TABLE------------------------------ */
 .table-header {
