--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -315,6 +315,32 @@ nav {
   color: #11101b;
   cursor: pointer;
 }
+
+#filter-bubble {
+    
+  -webkit-transition: all 0.1s;
+	-moz-transition: all 0.1s;
+	transition: all 0.1s;
+	
+  -webkit-box-shadow: 0px 6px 0px #333333;
+  -moz-box-shadow: 0px 6px 0px #333333;
+  box-shadow: 0px 6px 0px #333333;
+}
+/* 
+#filter-bubble:hover {
+  background-color: #fefefe;
+  color: #11101b;
+  transition: all 0.3s ease-in-out;
+} */
+
+#filter-bubble:active {
+  -webkit-box-shadow: 0px 2px 0px #fefefe;
+  -moz-box-shadow: 0px 2px 0px #fefefe;
+  box-shadow: 0px 2px 0px #fefefe;
+  position:relative;
+  top:4px;
+}
+
 /* -----------------------------TABLE------------------------------ */
 .table-header {
   color: #fefefe;
