--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -326,14 +326,15 @@ nav {
   -moz-box-shadow: 0px 6px 0px #333333;
   box-shadow: 0px 6px 0px #333333;
 }
-/* 
 #filter-bubble:hover {
   background-color: #fefefe;
-  color: #11101b;
+  color: #333333;
   transition: all 0.3s ease-in-out;
-} */
+}
 
 #filter-bubble:active {
+  background-color: #333333;
+  color: #fefefe ;
   -webkit-box-shadow: 0px 2px 0px #fefefe;
   -moz-box-shadow: 0px 2px 0px #fefefe;
   box-shadow: 0px 2px 0px #fefefe;
