--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -143,7 +143,7 @@ nav {
   max-width: 990px;
 }
 
-.faq-info > h1 {
+.faq-info>h1 {
   font-size: 30px;
   font-weight: 600;
   color: #fefefe;
@@ -151,7 +151,7 @@ nav {
   margin-bottom: 10px;
 }
 
-.faq-info > p {
+.faq-info>p {
   font-size: 17px;
   font-weight: 300;
   color: #fefefe;
@@ -188,7 +188,7 @@ nav {
   font-weight: 500;
 }
 
-.title > h2 {
+.title>h2 {
   font-weight: 500;
 }
 
@@ -216,7 +216,8 @@ nav {
 
 .disaster-sidebar {
   position: absolute;
-  top: 40%; /* Changed top to 50% */
+  top: 40%;
+  /* Changed top to 50% */
   right: 0;
   width: 250px;
   height: 10%;
@@ -225,7 +226,8 @@ nav {
   padding: 10px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   z-index: 1;
-  transform: translateY(-50%); /* Added transform translateY */
+  transform: translateY(-50%);
+  /* Added transform translateY */
 }
 
 .disaster-sidebar h3 {
@@ -307,7 +309,7 @@ nav {
 }
 
 /* changed */
-.bulletin__wrapper > .accordion {
+.bulletin__wrapper>.accordion {
   width: 100%;
   margin-top: 30px;
   border-top: 1px solid #fff;
@@ -330,7 +332,7 @@ nav {
   font-weight: 700;
 }
 
-.bulletin__selected_filter{
+.bulletin__selected_filter {
   border: 1px solid #fefefe;
   padding: 10px 25px;
   border-radius: 50px;
@@ -356,4 +358,13 @@ nav {
   border: 1px solid #fefefe;
   padding: 10px;
   color: #fefefe;
+}
+
+.marker-generic {
+  background-color: #3498db;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
 }
