--- a/src/screens/SendResources/SendResources.css
+++ b/src/screens/SendResources/SendResources.css
@@ -49,3 +49,7 @@ z-index: 1;
 .currentLoc:hover .tooltip1 {
 visibility: visible;
 }
+
+.send-resources-btn:hover {
+  background-color: rgb(83 105 214);
+}
