--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -366,6 +366,8 @@ nav {
   color: #fefefe;
 }
 
+/* -----------------------------MARKER------------------------------ */
+
 .marker-generic {
   background-color: #3498db;
   border: 2px solid #ffffff;
@@ -373,4 +375,51 @@ nav {
   cursor: pointer;
   height: 20px;
   width: 20px;
+}
+
+/* -----------------------------INSTRUCTION-SIDEBAR------------------------------ */
+.instruction-sidebar {
+  position: absolute;
+  top: 50%;
+  /* Changed top to 50% */
+  right: 0;
+  width: 30%;
+  height: 30%;
+  overflow-y: scroll;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  transform: translateY(-50%);
+  /* Added transform translateY */
+}
+
+.instruction-sidebar table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.instruction-sidebar th,
+.instruction-sidebar td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+
+.instruction-sidebar h3 {
+  margin-top: 0;
+}
+
+.instruction-sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.instruction-sidebar li {
+  cursor: pointer;
+}
+
+.instruction-sidebar li:hover {
+  text-decoration: underline;
 }
