--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -22,7 +22,7 @@
 /* --------------------------------NEW-NAVBAR------------------------- */
 
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   padding: 0;
@@ -144,7 +144,7 @@ nav {
   max-width: 1200px;
 }
 
-.faq-info>h1 {
+.faq-info > h1 {
   font-size: 30px;
   font-weight: 600;
   color: #fefefe;
@@ -152,7 +152,7 @@ nav {
   margin-bottom: 10px;
 }
 
-.faq-info>p {
+.faq-info > p {
   font-size: 17px;
   font-weight: 300;
   width: 100%;
@@ -173,13 +173,13 @@ nav {
 
 .accordion {
   width: 100%;
-  border-top: 1px solid #D6D6D6;
+  border-top: 1px solid #d6d6d6;
   max-width: 1200px;
 }
 
 .item {
   background-color: #333333;
-  border-bottom: 1px solid #D6D6D6;
+  border-bottom: 1px solid #d6d6d6;
   padding: 5px 10px;
 }
 
@@ -194,7 +194,7 @@ nav {
   font-weight: 500;
 }
 
-.title>h2 {
+.title > h2 {
   font-weight: 500;
 }
 
@@ -251,6 +251,24 @@ nav {
 
 .disaster-sidebar li:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 767px) {
+  .faq-page {
+    padding: 15px;
+  }
+
+  .faq-info > h1 {
+    font-size: 25px;
+  }
+
+  .faq-info > p {
+    font-size: 15px;
+  }
+
+  .title {
+    font-size: 14px;
+  }
 }
 
 /* -----------------------------BULLETIN------------------------------ */
@@ -315,7 +333,7 @@ nav {
 }
 
 /* changed */
-.bulletin__wrapper>.accordion {
+.bulletin__wrapper > .accordion {
   width: 100%;
   margin-top: 30px;
   border-top: 1px solid #fff;
@@ -353,7 +371,6 @@ nav {
 
 /* -----------------------------TABLE------------------------------ */
 
-
 .table-header {
   color: #fefefe;
   border: 1px solid #fefefe;
@@ -374,3 +391,4 @@ nav {
   height: 20px;
   width: 20px;
 }
+
