--- a/src/screens/DisasterInformation/DisasterInformation.css
+++ b/src/screens/DisasterInformation/DisasterInformation.css
@@ -53,3 +53,9 @@ visibility: visible;
 .save-information-btn:hover {
   background-color: rgb(83 105 214);
 }
+
+@media only screen and (max-width: 767px) {
+  .disaster-info-title {
+    font-size: 30px !important;
+  }
+}
