--- a/src/screens/LoginScreen/LoginScreen.css
+++ b/src/screens/LoginScreen/LoginScreen.css
@@ -5,6 +5,17 @@
   font-family: "Inter";
 }
 
+/* .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #333;
+} */
+
 .container {
   display: flex;
   flex-direction: column;
@@ -13,6 +24,8 @@
   height: 100%;
   min-height: 100vh;
   width: 100%;
+  overflow: hidden;
+  max-width: 100vw;
   background-color: #333;
 }
 
