--- a/src/screens/SendResources/SendResources.css
+++ b/src/screens/SendResources/SendResources.css
@@ -53,3 +53,10 @@ visibility: visible;
 .send-resources-btn:hover {
   background-color: rgb(83 105 214);
 }
+
+@media only screen and (max-width: 767px) {
+  .send-resources-container {
+    padding: 15px;
+    padding-top: 0;
+  }
+}
