--- a/src/screens/ViewReports/ViewReports.css
+++ b/src/screens/ViewReports/ViewReports.css
@@ -1,3 +1,31 @@
 .view-report-heading {
     margin: 30px 10px 20px 10px;
 }
+
+.view-report-filters{
+    margin-left: 10px;
+}
+
+@media only screen and (max-width: 1099px){
+
+
+.report-table {
+    width: 100%;
+    min-width: 100vw;
+    max-width: 100vw;
+    overflow: scroll;
+}
+
+.view-report-filters{
+    flex-direction: column !important;
+}
+
+.view-report-filters {
+    margin-left: 0px !important;
+    height: 200px;
+}
+
+.view-report-top-btn {
+    font-size: 14px !important;
+}
+}
