--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,22 +1,23 @@
 .highlighted-row {
-    background-color: #0d47a1;
-  }
+  background-color: #0d47a1;
+}
 
 .table-container {
-    padding: 20px;
-  }
+  padding: 20px;
+}
 
 .table {
-    table-layout: fixed;
-    width: 100%;
-  }
-  
-.th, .td {
-   width: 100px; /* or any other fixed width you prefer */
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  table-layout: fixed;
+  width: 100%;
+}
+
+.th,
+.td {
+  width: 100px; /* or any other fixed width you prefer */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .view-report-top-btn:hover {
   background-color: rgb(83 105 214);
@@ -34,11 +35,40 @@ select {
   cursor: pointer;
 }
 
+.table-btns {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.related-report-table {
+  width: 100%;
+  max-width: 100vw;
+  padding: 15px;
+  overflow: scroll;
+}
+
 @media only screen and (max-width: 1099px) {
   .view-report-table-element {
     width: 100%;
     max-width: 100vw;
     min-width: 100vw;
     overflow-x: scroll;
-}
+  }
+  .table-container {
+    padding: 20px;
+    width: 100%;
+    max-width: 100vw;
+    padding: 15px;
+    overflow: scroll;
+  }
+  .table-btns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px !important;
+  }
 }
