--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -369,6 +369,68 @@ nav {
   font-weight: 700;
 }
 
+@media only screen and (max-width: 767px) {
+  .date-location-bulletin {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .bulletin-h2 {
+    text-align: center;
+  }
+  .calender-bulletin {
+    margin-right: 0 !important;
+  }
+  .bulletin__info {
+    font-size: 15px;
+    font-weight: 300;
+    color: #fefefe;
+    text-align: left;
+    margin-bottom: 50px;
+    width: 100%;
+    max-width: 1400px;
+    line-height: 28px;
+}
+.bulletin-container {
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  max-width: 100vw;
+}
+.bulletin-page {
+  width: 100%;
+  max-width: 1400px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 100%;
+  color: #fefefe;
+}
+.bulletin-filters {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 100vw;
+}
+.bulletin__filter {
+  margin-bottom: 10px;
+}
+.bulletin__selected_filter {
+  margin-bottom: 10px;
+}
+.bulletin__item .title {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+}
+
 /* -----------------------------TABLE------------------------------ */
 
 .table-header {
