--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -1,22 +1,23 @@
 .highlighted-row {
-    background-color: #0d47a1;
-  }
+  background-color: #0d47a1;
+}
 
 .table-container {
-    padding: 20px;
-  }
+  padding: 20px;
+}
 
 .table {
-    table-layout: fixed;
-    width: 100%;
-  }
-  
-.th, .td {
-   width: 100px; /* or any other fixed width you prefer */
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  table-layout: fixed;
+  width: 100%;
+}
+
+.th,
+.td {
+  width: 100px; /* or any other fixed width you prefer */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .view-report-top-btn:hover {
   background-color: rgb(83 105 214);
@@ -40,5 +41,5 @@ select {
     max-width: 100vw;
     min-width: 100vw;
     overflow-x: scroll;
-}
+  }
 }
